@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.action.admin.cluster.snapshots.features;
@@ -16,7 +17,6 @@ import org.elasticsearch.xcontent.ToXContentObject;
 import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -25,12 +25,12 @@ public class GetSnapshottableFeaturesResponse extends ActionResponse implements 
     private final List<SnapshottableFeature> snapshottableFeatures;
 
     public GetSnapshottableFeaturesResponse(List<SnapshottableFeature> features) {
-        this.snapshottableFeatures = Collections.unmodifiableList(features);
+        this.snapshottableFeatures = List.copyOf(features);
     }
 
     public GetSnapshottableFeaturesResponse(StreamInput in) throws IOException {
         super(in);
-        snapshottableFeatures = in.readList(SnapshottableFeature::new);
+        snapshottableFeatures = in.readCollectionAsImmutableList(SnapshottableFeature::new);
     }
 
     public List<SnapshottableFeature> getSnapshottableFeatures() {
@@ -39,7 +39,7 @@ public class GetSnapshottableFeaturesResponse extends ActionResponse implements 
 
     @Override
     public void writeTo(StreamOutput out) throws IOException {
-        out.writeList(snapshottableFeatures);
+        out.writeCollection(snapshottableFeatures);
     }
 
     @Override
