@@ -7,7 +7,6 @@
 
 package org.elasticsearch.xpack.cluster.metadata;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
@@ -17,12 +16,19 @@ import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.LifecycleExecutionState;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.metadata.Template;
+import org.elasticsearch.cluster.project.DefaultProjectResolver;
 import org.elasticsearch.cluster.routing.allocation.DataTier;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentHelper;
+import org.elasticsearch.core.Strings;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.core.Tuple;
+import org.elasticsearch.index.IndexModule;
+import org.elasticsearch.index.IndexSettings;
+import org.elasticsearch.index.IndexVersion;
+import org.elasticsearch.snapshots.SearchableSnapshotsSettings;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xcontent.ParseField;
@@ -39,11 +45,11 @@ import org.elasticsearch.xpack.core.ilm.OperationMode;
 import org.elasticsearch.xpack.core.ilm.Phase;
 import org.elasticsearch.xpack.core.ilm.SetPriorityAction;
 import org.elasticsearch.xpack.core.ilm.ShrinkAction;
+import org.elasticsearch.xpack.core.searchablesnapshots.MountSearchableSnapshotRequest;
 import org.junit.Before;
 
 import java.io.ByteArrayInputStream;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -53,6 +59,7 @@ import static org.elasticsearch.cluster.metadata.IndexMetadata.INDEX_ROUTING_REQ
 import static org.elasticsearch.cluster.metadata.LifecycleExecutionState.ILM_CUSTOM_METADATA_KEY;
 import static org.elasticsearch.cluster.routing.allocation.DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE;
 import static org.elasticsearch.cluster.routing.allocation.DataTier.TIER_PREFERENCE;
+import static org.elasticsearch.snapshots.SearchableSnapshotsSettings.SEARCHABLE_SNAPSHOT_STORE_TYPE;
 import static org.elasticsearch.xpack.cluster.metadata.MetadataMigrateToDataTiersRoutingService.allocateActionDefinesRoutingRules;
 import static org.elasticsearch.xpack.cluster.metadata.MetadataMigrateToDataTiersRoutingService.convertAttributeValueToTierPreference;
 import static org.elasticsearch.xpack.cluster.metadata.MetadataMigrateToDataTiersRoutingService.migrateIlmPolicies;
@@ -96,7 +103,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
     }
 
     public void testMigrateIlmPolicyForIndexWithoutILMMetadata() {
-        ShrinkAction shrinkAction = new ShrinkAction(2, null);
+        ShrinkAction shrinkAction = new ShrinkAction(2, null, false);
         AllocateAction warmAllocateAction = new AllocateAction(null, null, Map.of("data", "warm"), null, Map.of("rack", "rack1"));
         AllocateAction coldAllocateAction = new AllocateAction(0, null, null, null, Map.of("data", "cold"));
         SetPriorityAction warmSetPriority = new SetPriorityAction(100);
@@ -112,23 +119,21 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 Metadata.builder()
                     .putCustom(
                         IndexLifecycleMetadata.TYPE,
-                        new IndexLifecycleMetadata(
-                            Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                            OperationMode.STOPPED
-                        )
+                        new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                     )
                     .put(IndexMetadata.builder(indexName).settings(getBaseIndexSettings()))
                     .build()
             )
             .build();
 
-        Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-        List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+        List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
         assertThat(migratedPolicies.size(), is(1));
         assertThat(migratedPolicies.get(0), is(lifecycleName));
 
-        ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-        IndexLifecycleMetadata updatedLifecycleMetadata = newState.metadata().custom(IndexLifecycleMetadata.TYPE);
+        ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+        IndexLifecycleMetadata updatedLifecycleMetadata = newState.metadata().getProject().custom(IndexLifecycleMetadata.TYPE);
         LifecyclePolicy lifecyclePolicy = updatedLifecycleMetadata.getPolicies().get(lifecycleName);
         Map<String, LifecycleAction> warmActions = lifecyclePolicy.getPhases().get("warm").getActions();
         assertThat(
@@ -146,8 +151,8 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         assertThat(migratedColdAllocateAction.getRequire().size(), is(0));
     }
 
-    public void testMigrateIlmPolicyFOrPhaseWithDeactivatedMigrateAction() {
-        ShrinkAction shrinkAction = new ShrinkAction(2, null);
+    public void testMigrateIlmPolicyForPhaseWithDeactivatedMigrateAction() {
+        ShrinkAction shrinkAction = new ShrinkAction(2, null, false);
         AllocateAction warmAllocateAction = new AllocateAction(null, null, Map.of("data", "warm"), null, Map.of("rack", "rack1"));
 
         LifecyclePolicy policy = new LifecyclePolicy(
@@ -170,7 +175,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         );
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -180,23 +185,21 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 Metadata.builder()
                     .putCustom(
                         IndexLifecycleMetadata.TYPE,
-                        new IndexLifecycleMetadata(
-                            Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                            OperationMode.STOPPED
-                        )
+                        new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                     )
                     .put(IndexMetadata.builder(indexName).settings(getBaseIndexSettings()))
                     .build()
             )
             .build();
 
-        Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-        List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+        List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
         assertThat(migratedPolicies.size(), is(1));
         assertThat(migratedPolicies.get(0), is(lifecycleName));
 
-        ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-        IndexLifecycleMetadata updatedLifecycleMetadata = newState.metadata().custom(IndexLifecycleMetadata.TYPE);
+        ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+        IndexLifecycleMetadata updatedLifecycleMetadata = newState.metadata().getProject().custom(IndexLifecycleMetadata.TYPE);
         LifecyclePolicy lifecyclePolicy = updatedLifecycleMetadata.getPolicies().get(lifecycleName);
         Map<String, LifecycleAction> warmActions = lifecyclePolicy.getPhases().get("warm").getActions();
         assertThat(
@@ -210,7 +213,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
 
     @SuppressWarnings("unchecked")
     public void testMigrateIlmPolicyRefreshesCachedPhase() {
-        ShrinkAction shrinkAction = new ShrinkAction(2, null);
+        ShrinkAction shrinkAction = new ShrinkAction(2, null, false);
         AllocateAction warmAllocateAction = new AllocateAction(null, null, Map.of("data", "warm"), null, Map.of("rack", "rack1"));
         AllocateAction coldAllocateAction = new AllocateAction(0, null, null, null, Map.of("data", "cold"));
         SetPriorityAction warmSetPriority = new SetPriorityAction(100);
@@ -239,22 +242,20 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder()
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
-                            new IndexLifecycleMetadata(
-                                Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                                OperationMode.STOPPED
-                            )
+                            new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                         )
                         .put(indexMetadata)
                         .build()
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
 
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
@@ -296,10 +297,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
                             new IndexLifecycleMetadata(
-                                Collections.singletonMap(
-                                    policyMetadataWithTotalShardsPerNode.getName(),
-                                    policyMetadataWithTotalShardsPerNode
-                                ),
+                                Map.of(policyMetadataWithTotalShardsPerNode.getName(), policyMetadataWithTotalShardsPerNode),
                                 OperationMode.STOPPED
                             )
                         )
@@ -308,12 +306,13 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
 
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
@@ -346,22 +345,20 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder()
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
-                            new IndexLifecycleMetadata(
-                                Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                                OperationMode.STOPPED
-                            )
+                            new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                         )
                         .put(indexMetadata)
                         .build()
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
 
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
@@ -400,22 +397,20 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder()
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
-                            new IndexLifecycleMetadata(
-                                Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                                OperationMode.STOPPED
-                            )
+                            new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                         )
                         .put(indexMetadata)
                         .build()
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
             // expecting the phase definition to be refreshed with the index being in the set_priority action
@@ -450,22 +445,20 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder()
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
-                            new IndexLifecycleMetadata(
-                                Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                                OperationMode.STOPPED
-                            )
+                            new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                         )
                         .put(indexMetadata)
                         .build()
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
 
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
@@ -485,11 +478,10 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
     }
 
     private Settings.Builder getBaseIndexSettings() {
-        return Settings.builder()
-            .put(LifecycleSettings.LIFECYCLE_NAME, lifecycleName)
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, randomIntBetween(1, 10))
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, randomIntBetween(0, 5))
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT);
+        return indexSettings(IndexVersion.current(), randomIntBetween(1, 10), randomIntBetween(0, 5)).put(
+            LifecycleSettings.LIFECYCLE_NAME,
+            lifecycleName
+        );
     }
 
     public void testAllocateActionDefinesRoutingRules() {
@@ -510,7 +502,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
     }
 
     public void testConvertAttributeValueToTierPreference() {
-        assertThat(convertAttributeValueToTierPreference("frozen"), is("data_frozen,data_cold,data_warm,data_hot"));
+        assertThat(convertAttributeValueToTierPreference("frozen"), is("data_frozen"));
         assertThat(convertAttributeValueToTierPreference("cold"), is("data_cold,data_warm,data_hot"));
         assertThat(convertAttributeValueToTierPreference("warm"), is("data_warm,data_hot"));
         assertThat(convertAttributeValueToTierPreference("hot"), is("data_hot"));
@@ -527,14 +519,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithWarmDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithWarmDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithWarmDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithWarmDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
         }
@@ -547,16 +540,38 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithWarmDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithWarmDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithWarmDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithWarmDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
+        }
+
+        {
+            // test the migration of `include.data: frozen` configuration to the equivalent _tier_preference routing
+            IndexMetadata.Builder indexWithFrozenDataAttribute = IndexMetadata.builder("indexWithFrozenDataAttribute")
+                .settings(getBaseIndexSettings().put(DATA_ROUTING_INCLUDE_SETTING, "frozen"));
+            ClusterState state = ClusterState.builder(ClusterName.DEFAULT)
+                .metadata(Metadata.builder().put(indexWithFrozenDataAttribute))
+                .build();
+
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
+            assertThat(migratedIndices.size(), is(1));
+            assertThat(migratedIndices.get(0), is("indexWithFrozenDataAttribute"));
+
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithFrozenDataAttribute");
+            assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
+            assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_frozen"));
         }
 
         {
@@ -574,14 +589,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
@@ -602,14 +618,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
@@ -626,14 +643,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
         }
@@ -649,14 +667,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
         }
@@ -672,14 +691,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
         }
@@ -696,14 +716,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
@@ -717,14 +738,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
@@ -738,12 +760,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithUnknownDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithUnknownDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithUnknownDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), is("something_else"));
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
         }
@@ -757,13 +781,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexDataAndBoxAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithDataAndBoxAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithDataAndBoxAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithDataAndBoxAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is("box1"));
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
@@ -775,12 +801,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .settings(getBaseIndexSettings().put(BOX_ROUTING_REQUIRE_SETTING, "warm"));
             ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(indexBoxAttribute)).build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithBoxAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithBoxAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is("warm"));
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
@@ -793,15 +821,122 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexNoRoutingAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexNoRoutingAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexNoRoutingAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
+        }
+    }
+
+    public void testMigrateMountedIndices() {
+        {
+            // migrate "cold" custom routing attribute for fully mounted index
+            IndexMetadata.Builder partiallyMountedIndex = IndexMetadata.builder("foo")
+                .settings(
+                    getBaseIndexSettings().put(DATA_ROUTING_REQUIRE_SETTING, "cold")
+                        .put(IndexModule.INDEX_STORE_TYPE_SETTING.getKey(), SEARCHABLE_SNAPSHOT_STORE_TYPE)
+                        .put(SearchableSnapshotsSettings.SNAPSHOT_PARTIAL_SETTING.getKey(), false)
+                );
+            ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(partiallyMountedIndex)).build();
+
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
+            assertThat(migratedIndices.size(), is(1));
+
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("foo");
+            assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
+            assertThat(
+                migratedIndex.getSettings().get(TIER_PREFERENCE),
+                is(MountSearchableSnapshotRequest.Storage.FULL_COPY.defaultDataTiersPreference())
+            );
+        }
+
+        {
+            // migrate the _wrong_ custom routing attribute for partially mounted index without any tier preference will keep data_frozen
+            IndexMetadata.Builder partiallyMountedIndex = IndexMetadata.builder("foo")
+                .settings(
+                    getBaseIndexSettings().put(BOX_ROUTING_REQUIRE_SETTING, "cold")
+                        .put(IndexModule.INDEX_STORE_TYPE_SETTING.getKey(), SEARCHABLE_SNAPSHOT_STORE_TYPE)
+                        .put(SearchableSnapshotsSettings.SNAPSHOT_PARTIAL_SETTING.getKey(), true)
+                );
+            ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(partiallyMountedIndex)).build();
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
+            // no index to migrate as the IndexMetadata.Builder#build method adds a tier preference for this partial index
+            assertThat(migratedIndices.size(), is(0));
+
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("foo");
+            assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is("cold"));
+            // partially mounted index must remain in `data_frozen`, however we do not change the setting
+            assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is(nullValue()));
+            assertThat(migratedIndex.getTierPreference(), is(IndexMetadata.PARTIALLY_MOUNTED_INDEX_TIER_PREFERENCE));
+        }
+
+        {
+            // migrate the _wrong_ custom routing attribute for fully mounted index without any tier preference will configure
+            // MountSearchableSnapshotRequest.Storage.FULL_COPY.defaultDataTiersPreference()
+            IndexMetadata.Builder partiallyMountedIndex = IndexMetadata.builder("foo")
+                .settings(
+                    getBaseIndexSettings().put(BOX_ROUTING_REQUIRE_SETTING, "cold")
+                        .put(IndexModule.INDEX_STORE_TYPE_SETTING.getKey(), SEARCHABLE_SNAPSHOT_STORE_TYPE)
+                        .put(SearchableSnapshotsSettings.SNAPSHOT_PARTIAL_SETTING.getKey(), false)
+                );
+            ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(partiallyMountedIndex)).build();
+
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
+            assertThat(migratedIndices.size(), is(1));
+
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("foo");
+            assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is("cold"));
+
+            assertThat(
+                migratedIndex.getSettings().get(TIER_PREFERENCE),
+                is(MountSearchableSnapshotRequest.Storage.FULL_COPY.defaultDataTiersPreference())
+            );
+        }
+
+        {
+            // partially mounted indices remain on tier_preference data_frozen
+            IndexMetadata.Builder partiallyMountedIndex = IndexMetadata.builder("foo")
+                .settings(
+                    getBaseIndexSettings().put(BOX_ROUTING_REQUIRE_SETTING, "cold")
+                        .put(IndexModule.INDEX_STORE_TYPE_SETTING.getKey(), SEARCHABLE_SNAPSHOT_STORE_TYPE)
+                        .put(SearchableSnapshotsSettings.SNAPSHOT_PARTIAL_SETTING.getKey(), true)
+                );
+            ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(partiallyMountedIndex)).build();
+
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "box");
+            assertThat(migratedIndices.size(), is(1));
+
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("foo");
+            assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is(nullValue()));
+            // partially mounted index must have _tier_preference and remain in `data_frozen` (despite the cold custom filtering
+            // attributed)
+            assertThat(
+                migratedIndex.getSettings().get(TIER_PREFERENCE),
+                is(MountSearchableSnapshotRequest.Storage.SHARED_CACHE.defaultDataTiersPreference())
+            );
         }
     }
 
@@ -818,14 +953,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithAllRoutingSettings))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithAllRoutingSettings"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithAllRoutingSettings");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithAllRoutingSettings");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_EXCLUDE_SETTING), nullValue());
@@ -844,14 +980,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithAllRoutingSettings))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithAllRoutingSettings"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithAllRoutingSettings");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithAllRoutingSettings");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_EXCLUDE_SETTING), nullValue());
@@ -882,7 +1019,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         );
         LifecyclePolicyMetadata policyWithDataAttribute = new LifecyclePolicyMetadata(
             policyToMigrate,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -900,7 +1037,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         );
         LifecyclePolicyMetadata policyWithOtherAttribute = new LifecyclePolicyMetadata(
             shouldntBeMigratedPolicy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -945,6 +1082,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         {
             Tuple<ClusterState, MigratedEntities> migratedEntitiesTuple = migrateToDataTiersRouting(
                 state,
+                DefaultProjectResolver.INSTANCE,
                 "data",
                 "catch-all",
                 REGISTRY,
@@ -954,22 +1092,23 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             );
 
             MigratedEntities migratedEntities = migratedEntitiesTuple.v2();
-            assertThat(migratedEntities.removedIndexTemplateName, is("catch-all"));
-            assertThat(migratedEntities.migratedPolicies.size(), is(1));
-            assertThat(migratedEntities.migratedPolicies.get(0), is(lifecycleName));
-            assertThat(migratedEntities.migratedIndices.size(), is(2));
-            assertThat(migratedEntities.migratedIndices, hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
+            assertThat(migratedEntities.removedIndexTemplateName(), is("catch-all"));
+            assertThat(migratedEntities.migratedPolicies().size(), is(1));
+            assertThat(migratedEntities.migratedPolicies().get(0), is(lifecycleName));
+            assertThat(migratedEntities.migratedIndices().size(), is(2));
+            assertThat(migratedEntities.migratedIndices(), hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
 
             ClusterState newState = migratedEntitiesTuple.v1();
-            assertThat(newState.metadata().getTemplates().size(), is(1));
-            assertThat(newState.metadata().getTemplates().get("catch-all"), nullValue());
-            assertThat(newState.metadata().getTemplates().get("other-template"), notNullValue());
+            assertThat(newState.metadata().getProject().templates().size(), is(1));
+            assertThat(newState.metadata().getProject().templates().get("catch-all"), nullValue());
+            assertThat(newState.metadata().getProject().templates().get("other-template"), notNullValue());
         }
 
         {
             // let's test a null template name to make sure nothing is removed
             Tuple<ClusterState, MigratedEntities> migratedEntitiesTuple = migrateToDataTiersRouting(
                 state,
+                DefaultProjectResolver.INSTANCE,
                 "data",
                 null,
                 REGISTRY,
@@ -979,22 +1118,23 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             );
 
             MigratedEntities migratedEntities = migratedEntitiesTuple.v2();
-            assertThat(migratedEntities.removedIndexTemplateName, nullValue());
-            assertThat(migratedEntities.migratedPolicies.size(), is(1));
-            assertThat(migratedEntities.migratedPolicies.get(0), is(lifecycleName));
-            assertThat(migratedEntities.migratedIndices.size(), is(2));
-            assertThat(migratedEntities.migratedIndices, hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
+            assertThat(migratedEntities.removedIndexTemplateName(), nullValue());
+            assertThat(migratedEntities.migratedPolicies().size(), is(1));
+            assertThat(migratedEntities.migratedPolicies().get(0), is(lifecycleName));
+            assertThat(migratedEntities.migratedIndices().size(), is(2));
+            assertThat(migratedEntities.migratedIndices(), hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
 
             ClusterState newState = migratedEntitiesTuple.v1();
-            assertThat(newState.metadata().getTemplates().size(), is(2));
-            assertThat(newState.metadata().getTemplates().get("catch-all"), notNullValue());
-            assertThat(newState.metadata().getTemplates().get("other-template"), notNullValue());
+            assertThat(newState.metadata().getProject().templates().size(), is(2));
+            assertThat(newState.metadata().getProject().templates().get("catch-all"), notNullValue());
+            assertThat(newState.metadata().getProject().templates().get("other-template"), notNullValue());
         }
 
         {
             // let's test a null node attribute parameter defaults to "data"
             Tuple<ClusterState, MigratedEntities> migratedEntitiesTuple = migrateToDataTiersRouting(
                 state,
+                DefaultProjectResolver.INSTANCE,
                 null,
                 null,
                 REGISTRY,
@@ -1004,15 +1144,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             );
 
             MigratedEntities migratedEntities = migratedEntitiesTuple.v2();
-            assertThat(migratedEntities.migratedPolicies.size(), is(1));
-            assertThat(migratedEntities.migratedPolicies.get(0), is(lifecycleName));
-            assertThat(migratedEntities.migratedIndices.size(), is(2));
-            assertThat(migratedEntities.migratedIndices, hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
+            assertThat(migratedEntities.migratedPolicies().size(), is(1));
+            assertThat(migratedEntities.migratedPolicies().get(0), is(lifecycleName));
+            assertThat(migratedEntities.migratedIndices().size(), is(2));
+            assertThat(migratedEntities.migratedIndices(), hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
 
             IndexMetadata migratedIndex;
-            migratedIndex = migratedEntitiesTuple.v1().metadata().index("indexWithWarmDataAttribute");
+            migratedIndex = migratedEntitiesTuple.v1().metadata().getProject().index("indexWithWarmDataAttribute");
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
-            migratedIndex = migratedEntitiesTuple.v1().metadata().index("indexWithUnknownDataAttribute");
+            migratedIndex = migratedEntitiesTuple.v1().metadata().getProject().index("indexWithUnknownDataAttribute");
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
         }
     }
@@ -1026,7 +1166,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .build();
             IllegalStateException illegalStateException = expectThrows(
                 IllegalStateException.class,
-                () -> migrateToDataTiersRouting(ilmRunningState, "data", "catch-all", REGISTRY, client, null, false)
+                () -> migrateToDataTiersRouting(
+                    ilmRunningState,
+                    DefaultProjectResolver.INSTANCE,
+                    "data",
+                    "catch-all",
+                    REGISTRY,
+                    client,
+                    null,
+                    false
+                )
             );
             assertThat(illegalStateException.getMessage(), is("stop ILM before migrating to data tiers, current state is [RUNNING]"));
         }
@@ -1039,7 +1188,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .build();
             IllegalStateException illegalStateException = expectThrows(
                 IllegalStateException.class,
-                () -> migrateToDataTiersRouting(ilmStoppingState, "data", "catch-all", REGISTRY, client, null, false)
+                () -> migrateToDataTiersRouting(
+                    ilmStoppingState,
+                    DefaultProjectResolver.INSTANCE,
+                    "data",
+                    "catch" + "-all",
+                    REGISTRY,
+                    client,
+                    null,
+                    false
+                )
             );
             assertThat(illegalStateException.getMessage(), is("stop ILM before migrating to data tiers, current state is [STOPPING]"));
         }
@@ -1052,6 +1210,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .build();
             Tuple<ClusterState, MigratedEntities> migratedState = migrateToDataTiersRouting(
                 ilmStoppedState,
+                DefaultProjectResolver.INSTANCE,
                 "data",
                 "catch-all",
                 REGISTRY,
@@ -1059,9 +1218,9 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 null,
                 false
             );
-            assertThat(migratedState.v2().migratedIndices, empty());
-            assertThat(migratedState.v2().migratedPolicies, empty());
-            assertThat(migratedState.v2().removedIndexTemplateName, nullValue());
+            assertThat(migratedState.v2().migratedIndices(), empty());
+            assertThat(migratedState.v2().migratedPolicies(), empty());
+            assertThat(migratedState.v2().removedIndexTemplateName(), nullValue());
         }
     }
 
@@ -1072,7 +1231,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder().putCustom(IndexLifecycleMetadata.TYPE, new IndexLifecycleMetadata(Map.of(), OperationMode.RUNNING))
                 )
                 .build();
-            migrateToDataTiersRouting(ilmRunningState, "data", "catch-all", REGISTRY, client, null, true);
+            migrateToDataTiersRouting(ilmRunningState, DefaultProjectResolver.INSTANCE, "data", "catch-all", REGISTRY, client, null, true);
             // no exceptions
         }
 
@@ -1082,15 +1241,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder().putCustom(IndexLifecycleMetadata.TYPE, new IndexLifecycleMetadata(Map.of(), OperationMode.STOPPING))
                 )
                 .build();
-            migrateToDataTiersRouting(ilmStoppingState, "data", "catch-all", REGISTRY, client, null, true);
+            migrateToDataTiersRouting(ilmStoppingState, DefaultProjectResolver.INSTANCE, "data", "catch-all", REGISTRY, client, null, true);
             // no exceptions
         }
     }
 
     public void testMigrationDoesNotRemoveComposableTemplates() {
-        ComposableIndexTemplate composableIndexTemplate = new ComposableIndexTemplate.Builder().indexPatterns(
-            Collections.singletonList("*")
-        ).template(new Template(Settings.builder().put(DATA_ROUTING_REQUIRE_SETTING, "hot").build(), null, null)).build();
+        ComposableIndexTemplate composableIndexTemplate = ComposableIndexTemplate.builder()
+            .indexPatterns(List.of("*"))
+            .template(new Template(Settings.builder().put(DATA_ROUTING_REQUIRE_SETTING, "hot").build(), null, null))
+            .build();
 
         String composableTemplateName = "catch-all-composable-template";
         ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
@@ -1098,6 +1258,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             .build();
         Tuple<ClusterState, MigratedEntities> migratedEntitiesTuple = migrateToDataTiersRouting(
             clusterState,
+            DefaultProjectResolver.INSTANCE,
             "data",
             composableTemplateName,
             REGISTRY,
@@ -1105,9 +1266,9 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             null,
             false
         );
-        assertThat(migratedEntitiesTuple.v2().removedIndexTemplateName, nullValue());
+        assertThat(migratedEntitiesTuple.v2().removedIndexTemplateName(), nullValue());
         // the composable template still exists, however it was migrated to not use the custom require.data routing setting
-        assertThat(migratedEntitiesTuple.v1().metadata().templatesV2().get(composableTemplateName), is(notNullValue()));
+        assertThat(migratedEntitiesTuple.v1().metadata().getProject().templatesV2().get(composableTemplateName), is(notNullValue()));
     }
 
     public void testMigrationSetsEnforceTierPreferenceToTrue() {
@@ -1117,7 +1278,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
 
         // if the cluster state doesn't mention the setting, it ends up true
         clusterState = ClusterState.builder(ClusterName.DEFAULT).build();
-        migratedEntitiesTuple = migrateToDataTiersRouting(clusterState, null, null, REGISTRY, client, null, false);
+        migratedEntitiesTuple = migrateToDataTiersRouting(
+            clusterState,
+            DefaultProjectResolver.INSTANCE,
+            null,
+            null,
+            REGISTRY,
+            client,
+            null,
+            false
+        );
         assertTrue(DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE_SETTING.get(migratedEntitiesTuple.v1().metadata().persistentSettings()));
         assertFalse(migratedEntitiesTuple.v1().metadata().transientSettings().keySet().contains(DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE));
 
@@ -1127,7 +1297,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         metadata.persistentSettings(Settings.builder().put(ENFORCE_DEFAULT_TIER_PREFERENCE, randomBoolean()).build());
         metadata.transientSettings(Settings.builder().put(ENFORCE_DEFAULT_TIER_PREFERENCE, randomBoolean()).build());
         clusterState = ClusterState.builder(ClusterName.DEFAULT).metadata(metadata).build();
-        migratedEntitiesTuple = migrateToDataTiersRouting(clusterState, null, null, REGISTRY, client, null, false);
+        migratedEntitiesTuple = migrateToDataTiersRouting(
+            clusterState,
+            DefaultProjectResolver.INSTANCE,
+            null,
+            null,
+            REGISTRY,
+            client,
+            null,
+            false
+        );
         assertTrue(DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE_SETTING.get(migratedEntitiesTuple.v1().metadata().persistentSettings()));
         assertFalse(migratedEntitiesTuple.v1().metadata().transientSettings().keySet().contains(DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE));
     }
@@ -1158,7 +1337,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 new Phase("cold", TimeValue.ZERO, Map.of(coldAllocateAction.getWriteableName(), coldAllocateAction))
             )
         );
-        return new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong());
+        return new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong());
     }
 
     public void testMigrateLegacyIndexTemplates() {
@@ -1218,7 +1397,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             List.of("test-*"),
             Settings.builder()
                 .put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle")
-                .put(LifecycleSettings.LIFECYCLE_PARSE_ORIGINATION_DATE, true)
+                .put(IndexSettings.LIFECYCLE_PARSE_ORIGINATION_DATE, true)
                 .build(),
             Map.of(),
             Map.of()
@@ -1236,10 +1415,12 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
             .build();
 
-        Metadata.Builder mb = Metadata.builder(clusterState.metadata());
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(clusterState);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
         List<String> migrateLegacyTemplates = MetadataMigrateToDataTiersRoutingService.migrateLegacyTemplates(
-            mb,
-            clusterState,
+            projectMetadataBuilder,
+            projectMetadata,
             nodeAttrName
         );
         assertThat(migrateLegacyTemplates.size(), is(3));
@@ -1252,7 +1433,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
         );
 
-        Map<String, IndexTemplateMetadata> migratedTemplates = mb.build().templates();
+        Map<String, IndexTemplateMetadata> migratedTemplates = projectMetadataBuilder.build().templates();
         assertThat(migratedTemplates.get("template-with-require-routing").settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-include-routing").settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-require-and-include-routing").settings().size(), is(1));
@@ -1268,77 +1449,82 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         String includeRoutingSetting = INDEX_ROUTING_INCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
         String excludeRoutingSetting = INDEX_ROUTING_EXCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
 
-        ComposableIndexTemplate templateWithRequireRouting = new ComposableIndexTemplate(
-            List.of("test-*"),
-            new Template(
-                Settings.builder().put(requireRoutingSetting, "hot").put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle").build(),
-                null,
-                null
-            ),
-            List.of(),
-            randomLong(),
-            randomLong(),
-            null
-        );
+        ComposableIndexTemplate templateWithRequireRouting = ComposableIndexTemplate.builder()
+            .indexPatterns(List.of("test-*"))
+            .template(
+                new Template(
+                    Settings.builder().put(requireRoutingSetting, "hot").put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle").build(),
+                    null,
+                    null
+                )
+            )
+            .componentTemplates(List.of())
+            .priority(randomLong())
+            .version(randomLong())
+            .build();
 
-        ComposableIndexTemplate templateWithIncludeRouting = new ComposableIndexTemplate(
-            List.of("test-*"),
-            new Template(
-                Settings.builder().put(includeRoutingSetting, "hot").put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle").build(),
-                null,
-                null
-            ),
-            List.of(),
-            randomLong(),
-            randomLong(),
-            null
-        );
+        ComposableIndexTemplate templateWithIncludeRouting = ComposableIndexTemplate.builder()
+            .indexPatterns(List.of("test-*"))
+            .template(
+                new Template(
+                    Settings.builder().put(includeRoutingSetting, "hot").put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle").build(),
+                    null,
+                    null
+                )
+            )
+            .componentTemplates(List.of())
+            .priority(randomLong())
+            .version(randomLong())
+            .build();
 
-        ComposableIndexTemplate templateWithExcludeRouting = new ComposableIndexTemplate(
-            List.of("test-*"),
-            new Template(
-                Settings.builder().put(excludeRoutingSetting, "hot").put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle").build(),
-                null,
-                null
-            ),
-            List.of(),
-            randomLong(),
-            randomLong(),
-            null
-        );
+        ComposableIndexTemplate templateWithExcludeRouting = ComposableIndexTemplate.builder()
+            .indexPatterns(List.of("test-*"))
+            .template(
+                new Template(
+                    Settings.builder().put(excludeRoutingSetting, "hot").put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle").build(),
+                    null,
+                    null
+                )
+            )
+            .componentTemplates(List.of())
+            .priority(randomLong())
+            .version(randomLong())
+            .build();
 
-        ComposableIndexTemplate templateWithRequireAndIncludeRoutings = new ComposableIndexTemplate(
-            List.of("test-*"),
-            new Template(
-                Settings.builder()
-                    .put(requireRoutingSetting, "hot")
-                    .put(includeRoutingSetting, "rack1")
-                    .put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle")
-                    .build(),
-                null,
-                null
-            ),
-            List.of(),
-            randomLong(),
-            randomLong(),
-            null
-        );
+        ComposableIndexTemplate templateWithRequireAndIncludeRoutings = ComposableIndexTemplate.builder()
+            .indexPatterns(List.of("test-*"))
+            .template(
+                new Template(
+                    Settings.builder()
+                        .put(requireRoutingSetting, "hot")
+                        .put(includeRoutingSetting, "rack1")
+                        .put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle")
+                        .build(),
+                    null,
+                    null
+                )
+            )
+            .componentTemplates(List.of())
+            .priority(randomLong())
+            .version(randomLong())
+            .build();
 
-        ComposableIndexTemplate templateWithoutCustomRoutings = new ComposableIndexTemplate(
-            List.of("test-*"),
-            new Template(
-                Settings.builder()
-                    .put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle")
-                    .put(LifecycleSettings.LIFECYCLE_PARSE_ORIGINATION_DATE, true)
-                    .build(),
-                null,
-                null
-            ),
-            List.of(),
-            randomLong(),
-            randomLong(),
-            null
-        );
+        ComposableIndexTemplate templateWithoutCustomRoutings = ComposableIndexTemplate.builder()
+            .indexPatterns(List.of("test-*"))
+            .template(
+                new Template(
+                    Settings.builder()
+                        .put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle")
+                        .put(IndexSettings.LIFECYCLE_PARSE_ORIGINATION_DATE, true)
+                        .build(),
+                    null,
+                    null
+                )
+            )
+            .componentTemplates(List.of())
+            .priority(randomLong())
+            .version(randomLong())
+            .build();
 
         ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
             .metadata(
@@ -1352,10 +1538,12 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
             .build();
 
-        Metadata.Builder mb = Metadata.builder(clusterState.metadata());
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(clusterState);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
         List<String> migratedComposableTemplates = MetadataMigrateToDataTiersRoutingService.migrateComposableTemplates(
-            mb,
-            clusterState,
+            projectMetadataBuilder,
+            projectMetadata,
             nodeAttrName
         );
         assertThat(migratedComposableTemplates.size(), is(3));
@@ -1368,7 +1556,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
         );
 
-        Map<String, ComposableIndexTemplate> migratedTemplates = mb.build().templatesV2();
+        Map<String, ComposableIndexTemplate> migratedTemplates = projectMetadataBuilder.build().templatesV2();
         assertThat(migratedTemplates.get("template-with-require-routing").template().settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-include-routing").template().settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-require-and-include-routing").template().settings().size(), is(1));
@@ -1432,7 +1620,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             new Template(
                 Settings.builder()
                     .put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle")
-                    .put(LifecycleSettings.LIFECYCLE_PARSE_ORIGINATION_DATE, true)
+                    .put(IndexSettings.LIFECYCLE_PARSE_ORIGINATION_DATE, true)
                     .build(),
                 null,
                 null
@@ -1453,10 +1641,11 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
             .build();
 
-        Metadata.Builder mb = Metadata.builder(clusterState.metadata());
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(clusterState);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
         List<String> migratedComponentTemplates = MetadataMigrateToDataTiersRoutingService.migrateComponentTemplates(
-            mb,
-            clusterState,
+            projectMetadataBuilder,
+            projectMetadata,
             nodeAttrName
         );
         assertThat(migratedComponentTemplates.size(), is(3));
@@ -1469,7 +1658,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
         );
 
-        Map<String, ComponentTemplate> migratedTemplates = mb.build().componentTemplates();
+        Map<String, ComponentTemplate> migratedTemplates = projectMetadataBuilder.build().componentTemplates();
         assertThat(migratedTemplates.get("template-with-require-routing").template().settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-include-routing").template().settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-require-and-include-routing").template().settings().size(), is(1));
@@ -1499,7 +1688,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             new Template(
                 Settings.builder()
                     .put(LifecycleSettings.LIFECYCLE_NAME, "testLifecycle")
-                    .put(LifecycleSettings.LIFECYCLE_PARSE_ORIGINATION_DATE, true)
+                    .put(IndexSettings.LIFECYCLE_PARSE_ORIGINATION_DATE, true)
                     .build(),
                 null,
                 null
@@ -1508,14 +1697,13 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             null
         );
 
-        ComposableIndexTemplate composableTemplateWithRequireRouting = new ComposableIndexTemplate(
-            List.of("test-*"),
-            new Template(Settings.builder().put(requireRoutingSetting, "hot").build(), null, null),
-            List.of("component-template-without-custom-routing"),
-            randomLong(),
-            randomLong(),
-            null
-        );
+        ComposableIndexTemplate composableTemplateWithRequireRouting = ComposableIndexTemplate.builder()
+            .indexPatterns(List.of("test-*"))
+            .template(new Template(Settings.builder().put(requireRoutingSetting, "hot").build(), null, null))
+            .componentTemplates(List.of("component-template-without-custom-routing"))
+            .priority(randomLong())
+            .version(randomLong())
+            .build();
 
         ComponentTemplate compTemplateWithRequireAndIncludeRoutings = new ComponentTemplate(
             new Template(
@@ -1542,16 +1730,17 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
             .build();
 
-        Metadata.Builder mb = Metadata.builder(clusterState.metadata());
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(clusterState);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
         MetadataMigrateToDataTiersRoutingService.MigratedTemplates migratedTemplates = MetadataMigrateToDataTiersRoutingService
-            .migrateIndexAndComponentTemplates(mb, clusterState, nodeAttrName);
-        assertThat(migratedTemplates.migratedLegacyTemplates, is(List.of("template-with-require-routing")));
-        assertThat(migratedTemplates.migratedComposableTemplates, is(List.of("composable-template-with-require-routing")));
-        assertThat(migratedTemplates.migratedComponentTemplates, is(List.of("component-with-require-and-include-routing")));
+            .migrateIndexAndComponentTemplates(projectMetadataBuilder, projectMetadata, nodeAttrName);
+        assertThat(migratedTemplates.migratedLegacyTemplates(), is(List.of("template-with-require-routing")));
+        assertThat(migratedTemplates.migratedComposableTemplates(), is(List.of("composable-template-with-require-routing")));
+        assertThat(migratedTemplates.migratedComponentTemplates(), is(List.of("component-with-require-and-include-routing")));
     }
 
     private String getWarmPhaseDef() {
-        return """
+        return Strings.format("""
             {
               "policy": "%s",
               "phase_definition": {
@@ -1573,11 +1762,11 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
               },
               "version": 1,
               "modified_date_in_millis": 1578521007076
-            }""".formatted(lifecycleName);
+            }""", lifecycleName);
     }
 
     private String getColdPhaseDefinitionWithTotalShardsPerNode() {
-        return """
+        return Strings.format("""
             {
               "policy": "%s",
               "phase_definition": {
@@ -1593,11 +1782,11 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
               },
               "version": 1,
               "modified_date_in_millis": 1578521007076
-            }""".formatted(lifecycleName);
+            }""", lifecycleName);
     }
 
     private String getColdPhaseDefinition() {
-        return """
+        return Strings.format("""
             {
               "policy": "%s",
               "phase_definition": {
@@ -1613,7 +1802,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
               },
               "version": 1,
               "modified_date_in_millis": 1578521007076
-            }""".formatted(lifecycleName);
+            }""", lifecycleName);
     }
 
     @SuppressWarnings("unchecked")
