@@ -12,6 +12,7 @@ import org.elasticsearch.xpack.core.ml.datafeed.DatafeedConfig;
 import org.elasticsearch.xpack.core.ml.job.config.Job;
 import org.elasticsearch.xpack.ml.extractor.ExtractedField;
 import org.elasticsearch.xpack.ml.extractor.ExtractedFields;
+import org.elasticsearch.xpack.ml.extractor.SourceSupplier;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -40,14 +41,14 @@ public class TimeBasedExtractedFields extends ExtractedFields {
         return timeField.getName();
     }
 
-    public Long timeFieldValue(SearchHit hit) {
-        Object[] value = timeField.value(hit);
+    public Long timeFieldValue(SearchHit hit, SourceSupplier source) {
+        Object[] value = timeField.value(hit, source);
         if (value.length != 1) {
             throw new RuntimeException(
                 "Time field [" + timeField.getName() + "] expected a single value; actual was: " + Arrays.toString(value)
             );
         }
-        if (value[0]instanceof Long longValue) {
+        if (value[0] instanceof Long longValue) {
             return longValue;
         }
         throw new RuntimeException("Time field [" + timeField.getName() + "] expected a long value; actual was: " + value[0]);
@@ -67,7 +68,7 @@ public class TimeBasedExtractedFields extends ExtractedFields {
             throw new IllegalArgumentException("cannot retrieve time field [" + timeField + "] because it is not aggregatable");
         }
         ExtractedField timeExtractedField = extractedTimeField(timeField, scriptFields);
-        List<String> remainingFields = job.allInputFields().stream().filter(f -> f.equals(timeField) == false).collect(Collectors.toList());
+        List<String> remainingFields = job.allInputFields().stream().filter(f -> f.equals(timeField) == false).toList();
         List<ExtractedField> allExtractedFields = new ArrayList<>(remainingFields.size() + 1);
         allExtractedFields.add(timeExtractedField);
         remainingFields.forEach(field -> allExtractedFields.add(extractionMethodDetector.detect(field)));
